Parse the posts into a sections tree with section headlines based on the directory structure

--- a/src/_includes/_layouts/html.njk
+++ b/src/_includes/_layouts/html.njk
@@ -10,9 +10,9 @@
 </head>
 <body>
     <main class="main">
-        <nav class="main__nav">
+        <aside class="main__nav">
             {% include "components/navigation.njk" %}
-        </nav>
+        </aside>
         <article class="main__article">
             {{ content | safe }}
         </article>
