--- a/src/_includes/_layouts/post.njk
+++ b/src/_includes/_layouts/post.njk
@@ -1,5 +1,5 @@
 ---
 layout: html
-permalink: "{{ page.fileSlug | stripNumbering }}/index.html"
+permalink: "{{ page.fileSlug | stripVersionPrefix }}/index.html"
 ---
 {{ content | safe }}
