--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -1,5 +1,17 @@
-<ol class="navigation">
-    {% for post in collections.all %}
-        <li class="navigation__item"><a href="{{ post.url }}" class="navigation__link">{{ post.data.title or post.url }}</a></li>
+<nav class="navigation">
+    {% for section in collections.postTree %}
+        {% set section_id = 'section-' + section.name %}
+        {% if section.title %}
+            <h4 id="{{ section_id }}">{{ section.title }}</h4>
+        {% endif %}
+        <ul class="navigation__list" aria-labelledby="{{ section_id }}">
+            {% for post in section.posts %}
+                <li class="navigation__item">
+                    <a href="{{ post.url }}" class="navigation__link">
+                        {{- post.data.title or post.url -}}
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
     {% endfor %}
-</ol>
+</nav>
