--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -2,27 +2,31 @@
 .main {
     height: 100vh;
     display: grid;
-    grid-template-columns: 2fr 1fr 4fr 3fr;
+    grid-template-columns: 25rem 1fr 50rem 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: "navigation space-left main space-right";
     justify-content: space-between;
     align-content: stretch;
     &__nav {
-        background: #333;
-        padding: 1rem;
         grid-area: navigation;
+        background: $aside-bg;
+        color: $aside-color;
+        padding: 2rem;
     }
     &__article {
-        margin-top: 1.5rem;
-        margin-bottom: 1.5rem;
-        padding: 1rem;
-        background: #f1f1f1;
         grid-area: main;
+        background: $article-bg;
+        color: $article-color;
+        font-size: $font-size-lg;
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        padding: 4rem 3rem;
+        @include stack(1.25rem);
     }
 }
 
 .navigation {
-    color: white;
+    @include stack(2rem);
     &__link {
         color: inherit;
     }
