--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -1,1 +1,38 @@
+// colors
+
+$white:    #ffffff;
+$gray-100: #FCF9F5;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #333333;
+$gray-900: #212529;
+$black:    #000000;
+
+// typography
+
+$font-size-base:    1rem;
+$font-size-xs:      0.75rem;
+$font-size-sm:      0.875rem;
+$font-size-lg:      1.25rem;
+$font-size-xl:      1.5rem;
+
+
+// components / utilities
+
 $stack-default-margin: 1rem;
+
+
+// main sections
+
+$body-bg: $gray-100;
+$body-color: $black;
+
+$article-bg: $white;
+$article-color: inherit;
+
+$aside-bg: $gray-800;
+$aside-color: $white;
