Add automatic anchors and table of contents, improve sidebar navigation

--- a/src/_includes/_layouts/html.njk
+++ b/src/_includes/_layouts/html.njk
@@ -13,7 +13,7 @@
         <aside class="main__nav">
             {% include "components/navigation.njk" %}
         </aside>
-        <article class="main__article">
+        <article class="main__article content">
             {{ content | safe }}
         </article>
     </main>
