--- a/src/_sass/_typography.scss
+++ b/src/_sass/_typography.scss
@@ -2,21 +2,30 @@
 body {
     background: $body-bg;
     color: $body-color;
+    font-family: $font-family-sans-serif;
+    font-weight: $font-weight-normal;
     font-size: 1rem;
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
-    line-height: 1.8;
+    line-height: $line-height-base;
 }
 
-
+// headlines
 h1, h2, h3, h4, h5, h6 {
-    line-height: 1.2;
+    line-height: $line-height-headlines;
+    font-weight: $font-weight-bold;
 }
-
-
-h1 { font-size: 2rem; }
+h1 { font-size: 2.5rem; }
 h2 { font-size: 1.5rem; }
 h3 { font-size: 1.25rem; }
 h4 { font-size: 1.125rem; }
 h5 { font-size: 1rem; }
 h6 { font-size: 0.875rem; }
+
+// links
+a {
+    color: $link-color;
+    &:hover, &:focus {
+        color: $link-hover-color;
+    }
+}
