--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -1,30 +1,59 @@
 // colors
 
-$white:    #ffffff;
-$gray-100: #FCF9F5;
+$white: #ffffff;
+$gray-100: #fcf9f5;
 $gray-200: #e9ecef;
 $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
 $gray-600: #6c757d;
-$gray-700: #495057;
+$gray-700: #444444;
 $gray-800: #333333;
 $gray-900: #212529;
-$black:    #000000;
+$black: #000000;
 
 // typography
 
-$font-size-base:    1rem;
-$font-size-xs:      0.75rem;
-$font-size-sm:      0.875rem;
-$font-size-lg:      1.25rem;
-$font-size-xl:      1.5rem;
+$font-family-sans-serif:
+    "Roboto",
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    "Helvetica Neue",
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    Helvetica,
+    Arial,
+    sans-serif,
+    // Emoji fonts
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol";
 
+$font-size-base: 1rem;
+$font-size-xs: 0.75rem;
+$font-size-sm: 0.875rem;
+$font-size-lg: 1.25rem;
+$font-size-xl: 1.5rem;
+
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-medium: 600;
+$font-weight-bold: 700;
+
+$line-height-sm: 1.5;
+$line-height-base: 1.8;
+$line-height-lg: 2;
+$line-height-headlines: 1.25;
+
+$link-color: inherit;
+$link-hover-color: $gray-700;
 
 // components / utilities
 
 $stack-default-margin: 1rem;
-
 
 // main sections
 
