--- a/src/_sass/_typography.scss
+++ b/src/_sass/_typography.scss
@@ -15,12 +15,12 @@ h1, h2, h3, h4, h5, h6 {
     line-height: $line-height-headlines;
     font-weight: $font-weight-bold;
 }
-h1 { font-size: 2.5rem; }
-h2 { font-size: 1.5rem; }
-h3 { font-size: 1.25rem; }
-h4 { font-size: 1.125rem; }
-h5 { font-size: 1rem; }
-h6 { font-size: 0.875rem; }
+h1 { @include font-size(2.5rem); }
+h2 { @include font-size(1.5rem); }
+h3 { @include font-size(1.25rem); }
+h4 { @include font-size(1.125rem); }
+h5 { @include font-size(1rem); }
+h6 { @include font-size(0.875rem); }
 
 // links
 a {
