--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -51,6 +51,8 @@ $line-height-headlines: 1.25;
 $link-color: inherit;
 $link-hover-color: $gray-700;
 
+$rfs-base-value: 1rem;
+
 // components / utilities
 
 $stack-default-margin: 1rem;
