--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -1,32 +1,65 @@
-
 .main {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 25rem 1fr 50rem 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "navigation space-left main space-right";
-    justify-content: space-between;
-    align-content: stretch;
-    &__nav {
-        grid-area: navigation;
-        background: $aside-bg;
-        color: $aside-color;
-        padding: 2rem;
-    }
     &__article {
-        grid-area: main;
+        max-width: 50rem;
+        margin: 0;
+        padding: 1.5rem;
         background: $article-bg;
         color: $article-color;
         @include font-size($font-size-lg);
-        margin-top: 5rem;
-        margin-bottom: 5rem;
-        padding: 4rem 3rem;
+    }
+    &__nav {
+        padding: 1rem;
+        background: $aside-bg;
+        color: $aside-color;
+    }
+
+    @media (min-width: 50rem) {
+        &__article {
+            margin: 3rem auto;
+        }
+    }
+
+    @media (min-width: 65rem) {
+        display: grid;
+        grid-template-columns: 20rem 1fr 40rem 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: "navigation space-left main space-right";
+        justify-content: space-between;
+        align-content: stretch;
+        &__article {
+            grid-area: main;
+            margin-top: 3rem;
+            margin-bottom: 3rem;
+            padding: 2rem 1.5rem;
+        }
+        &__nav {
+            grid-area: navigation;
+            padding: 1.5rem;
+            @supports (position: sticky) {
+                max-height: 100vh;
+                overflow-y: auto;
+                position: sticky;
+                top: 0;
+            }
+        }
+    }
+
+    @media (min-width: 80rem) {
+        grid-template-columns: 25rem 1fr 50rem 1fr;
+        &__article {
+            margin-top: 5rem;
+            margin-bottom: 5rem;
+            padding: 4rem 3rem;
+        }
+        &__nav {
+            padding: 2rem;
+        }
     }
 }
 
 .navigation {
-    @include stack(2rem);
     &__section {
+        margin-bottom: 2rem;
         @include stack(.5rem);
     }
     &__headline {
@@ -40,13 +73,14 @@
         font-weight: $font-weight-medium;
         color: inherit;
         text-decoration: none;
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
             color: inherit;
             text-decoration: underline;
         }
         &--active {
             &::before {
-                content: "→" " ";
+                content: "→"" ";
             }
         }
     }
@@ -67,9 +101,4 @@
             }
         }
     }
-}
-
-.content {
-    @include stack(1.25rem);
-    @include stack-before-headlines(2.5rem);
 }
