--- a/src/_sass/_typography.scss
+++ b/src/_sass/_typography.scss
@@ -6,7 +6,7 @@ body {
     font-weight: $font-weight-normal;
     font-size: 1rem;
     scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
+    text-rendering: auto;
     line-height: $line-height-base;
 }
 
