Mobile navigation layout & javascript handlers

--- a/src/_includes/_layouts/html.njk
+++ b/src/_includes/_layouts/html.njk
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
-
     <title>{{ title }}</title>
+
+    <link rel="stylesheet" href="/css/main.css">
+    <script src="/js/main.js" defer></script>
+
     <link rel="canonical " href="{{ site.url + page.url }}">
 </head>
 <body>
     <main class="main">
-        <article class="main__article content">
-            {{ content | safe }}
-        </article>
         <aside class="main__nav">
             {% include "components/navigation.njk" %}
         </aside>
+        <article class="main__article content">
+            {{ content | safe }}
+        </article>
     </main>
 </body>
 </html>
