--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -65,5 +65,10 @@ $body-color: $black;
 $article-bg: $white;
 $article-color: inherit;
 
-$aside-bg: $gray-800;
-$aside-color: $white;
+$navigation-bg: $gray-800;
+$navigation-color: $white;
+
+
+// navigation & header
+
+$mobile-header-height: 4rem;
