--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -1,4 +1,14 @@
-<nav class="navigation">
+<div class="header">
+    <button class="header__burger hamburger hamburger--arrow" type="button" id="navigation-button"
+        aria-controls="navigation-menu" aria-haspopup="true" aria-expanded="false">
+        <span class="sr-only" id="navigation-label">Toggle site navigation</span>
+        <span class="hamburger-box" aria-hidden>
+            <span class="hamburger-inner"></span>
+        </span>
+    </button>
+</div>
+
+<nav class="navigation" id="navigation-menu" tabindex="-1" aria-label="Site navigation menu">
     {% for section in collections.postTree %}
         <section class="navigation__section">
             {% set section_id = 'section-' + section.name %}
