--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -2,18 +2,28 @@
     &__article {
         max-width: 50rem;
         margin: 0;
-        padding: 1.5rem;
+        padding: ($mobile-header-height + 1rem) 1rem 1rem 1rem;
         background: $article-bg;
         color: $article-color;
         @include font-size($font-size-lg);
     }
     &__nav {
-        background: $aside-bg;
-        color: $aside-color;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        z-index: 2;
+        pointer-events: none;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+        align-items: stretch;
     }
 
     @media (min-width: 50rem) {
         &__article {
+            padding: 2rem;
             margin: 3rem auto;
         }
     }
@@ -33,6 +43,7 @@
         }
         &__nav {
             grid-area: navigation;
+            position: static;
         }
     }
 
@@ -47,21 +58,33 @@
 }
 
 .navigation {
+    // mobile navigation is hidden by default
+    display: none;
+    &--active {
+        display: block;
+    }
+    flex: 1 1 auto;
+    pointer-events: initial;
+
+    overflow-y: auto;
+    overscroll-behavior: contain;
+
     padding: 1rem;
+    background: $navigation-bg;
+    color: $navigation-color;
     @media (min-width: 65rem) {
+        display: block;
         padding: 1.5rem;
+        @supports (position: sticky) {
+            max-height: 100vh;
+            position: sticky;
+            top: 0;
+        }
     }
     @media (min-width: 80rem) {
         // don't use stack here so the last element has margin bottom as well
         // this way, it has some padding to the bottom when the nav is scrolled down
         padding: 2rem;
-    }
-    @supports (position: sticky) {
-        max-height: 100vh;
-        position: sticky;
-        top: 0;
-        overflow-y: auto;
-        overscroll-behavior: contain;
     }
 
     &__section {
@@ -106,5 +129,37 @@
                 }
             }
         }
+    }
+}
+
+$hamburger-types: (
+    arrow
+) !default;
+$hamburger-layer-color: $white;
+$hamburger-padding-x: 1rem;
+$hamburger-padding-y: 1rem;
+
+@import "../../node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
+
+
+.header {
+    @media (min-width: 65rem) {
+        display: none;
+    }
+    flex: 0 0 auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: $mobile-header-height;
+    max-height: 15vh;
+    // background: linear-gradient(to bottom, rgba($white, 1) 0%, rgba($white, 1) 75%, rgba($white, 0) 100%);
+    background: $navigation-bg;
+    color: $white;
+    pointer-events: initial;
+    &__burger {
+        // &.is-active:focus {
+        //     outline: none;
+        //     border: none;
+        // }
     }
 }
