--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -1,5 +1,8 @@
 .main {
+    min-height: 100vh;
+
     &__article {
+        width: 100%;
         max-width: 50rem;
         margin: 0;
         padding: ($mobile-header-height + 1rem) 1rem 1rem 1rem;
