Add previous / next links to posts

--- a/src/_includes/_layouts/post.njk
+++ b/src/_includes/_layouts/post.njk
@@ -3,3 +3,5 @@ layout: html
 permalink: "{{ page.fileSlug | stripVersionPrefix }}/index.html"
 ---
 {{ content | safe }}
+
+{% include "components/post-footer.njk" %}
