--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -110,7 +110,7 @@
             color: inherit;
             text-decoration: underline;
         }
-        &--active {
+        &[aria-current] {
             &::before {
                 content: "→"" ";
             }
