Add package version to included assets for cache busting

--- a/src/_includes/_layouts/html.njk
+++ b/src/_includes/_layouts/html.njk
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
 
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/main.js" defer></script>
+    <link rel="stylesheet" href="/css/main.css?v={{ site.version }}">
+    <script src="/js/main.js?v={{ site.version }}" defer></script>
 
     <link rel="canonical " href="{{ site.url + page.url }}">
 </head>
