Switch permalink symbol, never show permalink icon on focus

--- a/src/_sass/_blocks.scss
+++ b/src/_sass/_blocks.scss
@@ -34,7 +34,7 @@
     h2 > & {
         display: none;
     }
-    h2:hover > &, h2:focus > & {
+    h2:hover > & {
         display: initial;
     }
     &, &:hover, &:focus {
