Add a11y link to skip to main content

--- a/site/_includes/_layouts/html.njk
+++ b/site/_includes/_layouts/html.njk
@@ -15,7 +15,7 @@
         <aside class="main__nav">
             {% include "components/navigation.njk" %}
         </aside>
-        <article class="main__article content">
+        <article class="main__article content" id="content">
             {{ content | safe }}
         </article>
     </main>
