Activate typographer option in markdown-it

--- a/src/_sass/_typography.scss
+++ b/src/_sass/_typography.scss
@@ -46,4 +46,8 @@ code, pre, kbd, samp {
 .content {
     @include stack(1.25rem);
     @include stack-before-headlines(2.5rem);
+
+    // > p:first-of-type::first-line {
+    //     font-variant: small-caps;
+    // }
 }
