--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -5,7 +5,7 @@
         width: 100%;
         max-width: 50rem;
         margin: 0;
-        padding: ($mobile-header-height + 1rem) 1rem 1rem 1rem;
+        padding: 1rem;
         background: $article-bg;
         color: $article-color;
         @include font-size($font-size-lg);
