Add a fontawesome shortcode and a back to top button

--- a/site/_includes/components/post-footer.njk
+++ b/site/_includes/components/post-footer.njk
@@ -1,3 +1,4 @@
+
 <aside class="post-footer">
     <nav class="continue-reading">
         {% set prevPost = page | postTreePrevious(collections.postTree) %}
@@ -19,4 +20,9 @@
             </p>
         {% endif %}
     </nav>
+    <p class="back-to-top">
+        <a href="#content" class="back-to-top__link" title="Back to top">
+            {% fontawesome "chevron-circle-up", "solid", ['back-to-top__icon'], 'Back to top' %}
+        </a>
+    </p>
 </aside>
