--- a/src/_sass/_blocks.scss
+++ b/src/_sass/_blocks.scss
@@ -11,6 +11,24 @@
     margin-top: 5rem;
     border-top: 1px solid $gray-300;
     padding-top: 1rem;
+    @include stack(1rem);
+}
+
+.back-to-top {
+    text-align: center;
+    &__link {
+        &, &:hover, &:focus {
+            text-decoration: none;
+        }
+    }
+    &__icon {
+        width: 2.5rem;
+        transition: transform 250ms ease-out;
+        &:hover, &:focus {
+            transform: scale(1.3);
+            transition: transform 250ms ease-out;
+        }
+    }
 }
 
 .continue-reading {
