Fix aria-hidden attribute on hamburger inner spans

--- a/site/_includes/components/navigation.njk
+++ b/site/_includes/components/navigation.njk
@@ -2,7 +2,7 @@
     <button class="header__burger hamburger hamburger--arrow" type="button" id="navigation-button"
         aria-controls="navigation-menu" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only" id="navigation-label">Toggle site navigation</span>
-        <span class="hamburger-box" aria-hidden>
+        <span class="hamburger-box" aria-hidden="true">
             <span class="hamburger-inner"></span>
         </span>
     </button>
