--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -83,7 +83,7 @@
 
     &__section {
         margin-bottom: 2rem;
-        @include stack(.5rem);
+        @include stack(.75rem);
     }
     &__headline {
         @include font-size($font-size-sm);
@@ -92,10 +92,12 @@
     &__list {
         list-style: none;
         padding-left: 0;
-        @include stack(.5rem);
+        @include stack(.75rem);
     }
     &__link {
+        display: block;
         font-weight: $font-weight-medium;
+        line-height: $line-height-sm;
         color: inherit;
         text-decoration: none;
         &:hover,
@@ -111,15 +113,21 @@
     }
     &__subnav {
         background: $gray-700;
-        padding: .5rem 1rem;
+        padding-left: 0;
         margin-top: .5rem;
         list-style: none;
         @include font-size($font-size-sm);
-        @include stack(.5rem);
     }
     &__subnav-link {
         @extend .navigation__link;
         font-weight: $font-weight-normal;
+        padding: .25rem 1rem;
+        .navigation__subnav-item:first-child & {
+            padding-top: .5rem;
+        }
+        .navigation__subnav-item:last-child & {
+            padding-bottom: .5rem;
+        }
     }
 }
 
