--- a/site/_includes/components/navigation.njk
+++ b/site/_includes/components/navigation.njk
@@ -20,9 +20,10 @@
             {% endif %}
             <ol class="navigation__list" aria-labelledby="{{ section_id }}">
                 {% for post in section.posts %}
+                    {% set isCurrentPage = post.url === page.url %}
                     <li class="navigation__item">
-                        <a href="{{ post.url }}" class="navigation__link"
-                            {{ 'aria-current="page"' if post.url === page.url }}>
+                        <a href="{{ '#content' if isCurrentPage else post.url }}" class="navigation__link"
+                            {{ 'aria-current="page"' if isCurrentPage }}>
                             {{- post.data.title or post.url -}}
                         </a>
                         {% if post.url === page.url %}
