A11y label for back to top link

--- a/site/_includes/components/post-footer.njk
+++ b/site/_includes/components/post-footer.njk
@@ -21,7 +21,7 @@
         {% endif %}
     </nav>
     <p class="back-to-top">
-        <a href="#content" class="back-to-top__link" title="Back to top">
+        <a href="#content" class="back-to-top__link" title="Back to top" aria-label="Back to top">
             {% fontawesome "chevron-circle-up", "solid", ['back-to-top__icon'], 'Back to top' %}
         </a>
     </p>
