Add mixin for prefers-reduced-motion and disable smooth scrolling for this preference

--- a/src/_sass/_mixins.scss
+++ b/src/_sass/_mixins.scss
@@ -19,3 +19,9 @@
         }
     }
 }
+
+@mixin prefers-reduced-motion {
+    @media (prefers-reduced-motion: reduce) {
+        @content;
+    }
+}
