--- a/src/_sass/_reset.scss
+++ b/src/_sass/_reset.scss
@@ -7,6 +7,9 @@
 
 html {
     scroll-behavior: smooth;
+    @include prefers-reduced-motion {
+        scroll-behavior: auto;
+    }
 }
 
 // remove margins
