--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -6,7 +6,8 @@
 @import "reset";
 
 @import "typography";
-@import "layout";
 @import "blocks";
+@import "layout";
+@import "navigation";
 
 @import "code-highlighting";
