--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -2,29 +2,31 @@
     min-height: 100vh;
 
     &__article {
+        background: $article-bg;
+        color: $article-color;
+        @include font-size($font-size-lg);
         width: 100%;
         max-width: 50rem;
         margin: 0;
         padding: 1rem;
-        background: $article-bg;
-        color: $article-color;
-        @include font-size($font-size-lg);
     }
     &__nav {
+        background: $navigation-bg;
+        color: $navigation-color;
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
         align-items: stretch;
     }
 
-    @media (min-width: 50rem) {
+    @include breakpoint-up(sm) {
         &__article {
             margin: 3rem auto;
             padding: 2rem;
         }
     }
 
-    @media (min-width: 65rem) {
+    @include breakpoint-up(md) {
         display: grid;
         grid-template-columns: 20rem 1fr 40rem 1fr;
         grid-template-rows: 1fr;
@@ -41,122 +43,12 @@
         }
     }
 
-    @media (min-width: 80rem) {
+    @include breakpoint-up(lg) {
         grid-template-columns: 25rem 1fr 50rem 1fr;
         &__article {
             margin-top: 5rem;
             margin-bottom: 5rem;
             padding: 4rem 3rem;
         }
-    }
-}
-
-.navigation {
-    // mobile navigation is hidden by default
-    display: none;
-    &--active {
-        display: block;
-    }
-    flex: 1 1 auto;
-
-    overflow-y: auto;
-    overscroll-behavior: contain;
-
-    padding: 1rem;
-    background: $navigation-bg;
-    color: $navigation-color;
-    @media (min-width: 65rem) {
-        display: block;
-        padding: 1.5rem;
-        @supports (position: sticky) {
-            max-height: 100vh;
-            position: sticky;
-            top: 0;
-        }
-    }
-    @media (min-width: 80rem) {
-        // don't use stack here so the last element has margin bottom as well
-        // this way, it has some padding to the bottom when the nav is scrolled down
-        padding: 2rem;
-    }
-
-    &__section {
-        margin-bottom: 2rem;
-        @include stack(.75rem);
-    }
-    &__headline {
-        @include font-size($font-size-sm);
-        font-weight: $font-weight-light;
-    }
-    &__list {
-        list-style: none;
-        padding-left: 0;
-        @include stack(.75rem);
-    }
-    &__link {
-        display: block;
-        font-weight: $font-weight-medium;
-        line-height: $line-height-sm;
-        color: inherit;
-        text-decoration: none;
-        &:hover,
-        &:focus {
-            color: inherit;
-            text-decoration: underline;
-        }
-        &[aria-current] {
-            &::before {
-                content: "→"" ";
-            }
-        }
-    }
-    &__subnav {
-        background: $gray-700;
-        padding-left: 0;
-        margin-top: .5rem;
-        list-style: none;
-        @include font-size($font-size-sm);
-    }
-    &__subnav-link {
-        @extend .navigation__link;
-        font-weight: $font-weight-normal;
-        padding: .25rem 1rem;
-        .navigation__subnav-item:first-child & {
-            padding-top: .5rem;
-        }
-        .navigation__subnav-item:last-child & {
-            padding-bottom: .5rem;
-        }
-    }
-}
-
-$hamburger-types: (
-    arrow
-) !default;
-$hamburger-layer-color: $white;
-$hamburger-padding-x: 1rem;
-$hamburger-padding-y: 1rem;
-
-@import "../../node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
-
-
-.header {
-    @media (min-width: 65rem) {
-        display: none;
-    }
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: $mobile-header-height;
-    max-height: 15vh;
-    // background: linear-gradient(to bottom, rgba($white, 1) 0%, rgba($white, 1) 75%, rgba($white, 0) 100%);
-    background: $navigation-bg;
-    color: $white;
-    &__burger {
-        line-height: 1;
-        // &.is-active:focus {
-        //     outline: none;
-        //     border: none;
-        // }
     }
 }
