--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -100,6 +100,15 @@ $navigation-bg: $gray-800;
 $navigation-color: $white;
 
 
+// responsive breakpoints
+
+$breakpoints: (
+    sm: 50rem,
+    md: 65rem,
+    lg: 80rem,
+);
+
+
 // navigation & header
 
 $mobile-header-height: 4rem;
