Add global site footer

--- a/site/_includes/_layouts/html.njk
+++ b/site/_includes/_layouts/html.njk
@@ -18,6 +18,9 @@
         <article class="main__article content" id="content">
             {{ content | safe }}
         </article>
+        <footer class="main__footer footer">
+            {% include "components/footer.njk" %}
+        </footer>
     </main>
 </body>
 </html>
