--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -99,6 +99,8 @@ $article-color: inherit;
 $navigation-bg: $gray-800;
 $navigation-color: $white;
 
+$footer-bg: $gray-400;
+$footer-color: inherit;
 
 // responsive breakpoints
 
